--- a/index.html
+++ b/index.html
@@ -39,11 +39,7 @@
                 <div class="top-nav-right txt-sm">
                   <ul class="links">
                     <!-- search icon -->
-                    <li>
-                      <a href="#">
-                        <span class="px-l"><i class="fas fa-search"></i>Search</span>
-                      </a>
-                    </li>
+                    
                     <li class="location">
                       <a href="">
                         <i style="color: red;" class="material-icons">location_on</i>
@@ -78,6 +74,7 @@
                     <li>
                       <a href="#">Locate</a>
                     </li>
+                  <input type="text" placeholder="Search..." name="search2">
                   </ul>
               </div>
               
